--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fontsource/dm-serif-text": "^5.1.0",
     "@headlessui/vue": "^1.7.23",
     "@nuxt/content": "^2.13.2",
     "@nuxt/fonts": "^0.9.2",
